Se integran cambios referentes a la proceso de gestionar la informacion de los pasivo de un asociado

--- a/src/app/components/associate/informations/financial-informations/financial-informations.component.html
+++ b/src/app/components/associate/informations/financial-informations/financial-informations.component.html
@@ -18,4 +18,10 @@
             <app-assets-information></app-assets-information>
         </div>
     </div>
+    <hr>
+    <div class="row">
+        <div class="col-12">
+            <app-passives-informations></app-passives-informations>
+        </div>
+    </div>
 </div>
