--- a/src/app/components/spinner-loader/spinner-loader.component.html
+++ b/src/app/components/spinner-loader/spinner-loader.component.html
@@ -1,3 +1,3 @@
-<div class="overlay" >
+<div class="overlay" *ngIf="lo">
     <div class="lds-facebook"><div></div><div></div><div></div></div>
 </div>
