--- a/src/styles.css
+++ b/src/styles.css
@@ -46,4 +46,13 @@ html, body{
     font-size: 10pt !important;
 }
 
-
+.overlay{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #007965;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
