Se integra ajuste para mostrar spinner en cada peticion.

--- a/src/app/components/associate/details-associate/details-associate.component.html
+++ b/src/app/components/associate/details-associate/details-associate.component.html
@@ -87,6 +87,7 @@
                         <router-outlet></router-outlet>
                     </div>
                 </div>
+                <ngx-spinner bdColor="rgba(242, 242, 242, 0.8)" color="rgba(54, 174, 124, 1)" type="ball-fussion"></ngx-spinner>
             </div>
         </div>
     </div>
