--- a/src/app/master/master.component.html
+++ b/src/app/master/master.component.html
@@ -9,7 +9,9 @@
         <div class="app-content mt-2">
             <div class="container">
                 <router-outlet></router-outlet>
+                <ngx-spinner bdColor="rgba(242, 242, 242, 0.8)" color="rgba(54, 174, 124, 1)" type="ball-fussion"></ngx-spinner>
             </div>
         </div>
     </div>
+    
 </div>
