Se ajusta el login para ejecutar un loading al ingresar y se mejora el menu lateral

--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="col">
-                                        <button pButton pRipple type="submit" label="Iniciar sesion" class="p-button-rounded border-0 btn-login" [disabled]="frmLogin.invalid"></button>
+                                        <button pButton pRipple type="submit" label="Iniciar sesion" class="p-button-rounded border-0 btn-login" [loading]="isLoading" [disabled]="frmLogin.invalid"></button>
                                     </div>
                                 </div>
                             </form>
