--- a/src/app/navs/nav-side/nav-side.component.css
+++ b/src/app/navs/nav-side/nav-side.component.css
@@ -1,14 +1,19 @@
 .nav-link{
-    color: #242424;
+    color: #4e746d;
     margin-top: 10px;
     cursor: pointer;
 }
 .nav-link h5 i {
     margin-right: 5px;
 }
+
+.nav-link h5{
+    font-size: 16pt;
+}
  .active{
-    background-color: #007965;
-    color: white;
+    background-color: rgba(0, 121, 101,0.5);
+    color: #014d40;
+    font-weight: bold;
     border-radius: 5px;  
  }
 
