--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 html, body{
     height: 100%;
     margin: 0;
-    background-color: #E4EFE7;
+    background-color: #d4dde0;
     font-size: 10pt;
 }
 
@@ -46,13 +46,3 @@ html, body{
     font-size: 10pt !important;
 }
 
-.overlay{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: #007965;
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
