--- a/src/app/navs/nav-side/nav-side.component.html
+++ b/src/app/navs/nav-side/nav-side.component.html
@@ -2,10 +2,10 @@
     <h3 class="font-primary">{{app_name}}</h3>
     <div class="menu mt-5">
         <ul class="nav flex-column">
-            <li class="nav-item">
+            <li class="nav-item font-primary">
               <a class="nav-link active" data-toggle="pill" [routerLink]="['/master']">
                 <h5>
-                    <i class="pi pi-users"></i> Asociados
+                    <i class="pi pi-users" ></i> Asociados
                 </h5>
               </a>
             </li>
