--- a/src/app/components/associate/list-associate/list-associate.component.html
+++ b/src/app/components/associate/list-associate/list-associate.component.html
@@ -11,7 +11,7 @@
         <div class="col-auto">
             <span class="p-input-icon-left">
                 <i class="pi pi-search"></i>
-                <input type="text" pInputText name="inputSearch" (keypress)="SearchAssociate($event)" #inputSearch = "ngModel" [(ngModel)]="params_search" placeholder="Search">         
+                <input type="text" pInputText class="font-weight-bold" autocomplete="off" name="inputSearch" (keypress)="SearchAssociate($event)" #inputSearch = "ngModel" [(ngModel)]="params_search" placeholder="Search">         
             </span>
         </div>
         <div class="col-auto">
