Se ajusta el tipo de estado para los asociado, se cambia el estado X a P (por actualizar).

--- a/src/app/components/associate/list-associate/list-associate.component.html
+++ b/src/app/components/associate/list-associate/list-associate.component.html
@@ -35,7 +35,7 @@
                 <tr>
                     <td>
                         <span class="badge rounded-pill p-2" [ngClass]="{'indev-bg-success':associate.modelTypeStatus.code === 'A',
-                                                                         'indev-bg-warning':associate.modelTypeStatus.code === 'X',
+                                                                         'indev-bg-warning':associate.modelTypeStatus.code === 'P',
                                                                          'indev-bg-danger':associate.modelTypeStatus.code === 'R'}">
                             {{associate.modelTypeStatus.concept}}
                         </span>
