--- a/src/app/navs/nav-side/nav-side.component.html
+++ b/src/app/navs/nav-side/nav-side.component.html
@@ -17,6 +17,13 @@
                 </a>
             </li>
             <li class="nav-item font-primary">
+                <a class="nav-link" data-toggle="pill" [routerLink]="['reports']">
+                <h5>
+                    <i class="pi pi-book"></i> Reportes
+                </h5>
+                </a>
+            </li>
+            <li class="nav-item font-primary">
                 <a class="nav-link" data-toggle="pill" href="#">
                 <h5>
                     <i class="pi pi-cog"></i> Ajustes
@@ -30,6 +37,7 @@
                 </h5>
                 </a>
             </li>
+            
           </ul>
           
     </div>
